[package]
name = "rnote-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
rnote-compose = { workspace = true }
rnote-engine = { workspace = true }

log = { workspace = true }
anyhow = { workspace = true }
smol = { workspace = true }
clap = { workspace = true }
indicatif = { workspace = true }
