[package]
name = "rnote-compose"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ink-stroke-modeler-rs = { git = "https://github.com/flxzt/ink-stroke-modeler-rs", rev = "c12302c6f1f87a45cb474b67a02897daa32a46a3" }

log = "0.4"
anyhow = "1"
serde = {version = "1", features = ["derive"]}
num-derive = "0.3"
num-traits = "0.2"
base64 = "0.21"
rand = "0.8"
rand_pcg = "0.3"
rand_distr = "0.4"
regex = "1.7"
once_cell = "1"
nalgebra = { version = "0.32", features = ["serde-serialize"] }
parry2d-f64 = { version = "0.13", features = ["serde-serialize"] }
piet = "0.6"
piet-cairo = "0.6"
kurbo = "0.9"
svg = "0.13.0"
roughr = "0.5"
rough_piet = "0.5"

[dev-dependencies]
