[package]
name = "rnote-engine"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# even though all submodule dependencies are specified with their url, cargo will search the root repository for the local packages
# see: https://github.com/rust-lang/cargo/issues/1462

rnote-compose = {path = "../rnote-compose", version="0.1"}
rnote-fileformats = {path = "../rnote-fileformats", version="0.1"}

log = "0.4.16"
anyhow = "1.0"
serde = {version = "1.0", features = ["derive", "rc"]}
serde_json = { version="1.0" }
rand = "0.8.5"
rand_pcg = "0.3.1"
rand_distr = "0.4.3"
regex = "1.5"
once_cell = "1.8"
num-derive = "0.3.3"
num-traits = "0.2.14"
itertools = "0.10.3"
rayon = "1.5"
futures = "0.3.21"
base64 = "0.13.0"
flate2 = "1.0"
slotmap = { version = "1.0", features = ["serde"] }
rstar = "0.9.2"
nalgebra = { version = "0.31.0", features = ["serde-serialize"] }
parry2d-f64 = { version = "0.9.0", features = ["serde-serialize"] }
gtk4 = {version = "0.5.2", features = ["v4_8"]}
cairo-rs = {version = "0.16.3", features = ["png", "svg", "pdf"]}
poppler-rs = {version = "0.20.0", features = ["v21_12"] }
librsvg = { git = "https://gitlab.gnome.org/GNOME/librsvg", rev = "669a888bec641efc2b59cd605750582d6bb77244" }
piet = "0.6"
piet-cairo = "0.6"
kurbo = "0.9.0"
image = "0.23.14"
svg = "0.10.0"
geo = "0.23.0"
xmlwriter = "0.1.0"
usvg = "0.22"
rodio = {version = "0.16.0", default-features=false, features = ["wav"] }
semver = { version = "1.0"}
unicode-segmentation = "1.9.0"

[dev-dependencies]
approx = "0.5.1"
