[package]
name = "rnote-engine"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rnote-compose = {path = "../rnote-compose", version="0.1"}
rnote-fileformats = {path = "../rnote-fileformats", version="0.1"}

librsvg = { git = "https://gitlab.gnome.org/GNOME/librsvg", tag = "2.56.0" }

log = "0.4"
anyhow = "1"
thiserror = "1"
serde = {version = "1", features = ["derive", "rc"]}
serde_json = { version="1" }
rand = "0.8"
rand_pcg = "0.3"
rand_distr = "0.4"
regex = "1.7"
once_cell = "1"
num-derive = "0.3"
num-traits = "0.2"
itertools = "0.10"
rayon = "1"
futures = "0.3"
base64 = "0.21"
flate2 = "1"
slotmap = { version = "1", features = ["serde"] }
rstar = "0.10"
nalgebra = { version = "0.32", features = ["serde-serialize"] }
parry2d-f64 = { version = "0.13", features = ["serde-serialize"] }

# the long-term plan is to remove the gtk4 dependency entirely, after switching to another renderer.
gtk4 = {version = "0.6", features = ["v4_10"]}

glib = {version = "0.17"}
cairo-rs = {version = "0.17", features = ["png", "svg", "pdf"]}
# newest poppler feature ("v21_12") is causing linking errors in mingw for some reason
poppler-rs = {version = "0.21", features = ["v20_9"] }
piet = "0.6"
piet-cairo = "0.6"
kurbo = "0.9"
image = "0.24"
svg = "0.13"
geo = "0.25"
chrono = "0.4"
rodio = {version = "0.17", default-features=false, features = ["symphonia-wav"] }
semver = { version = "1"}
unicode-segmentation = "1"
usvg = "0.33"
xmlwriter = "0.1"

[dev-dependencies]
approx = "0.5.1"
