[package]
name = "rnote-fileformats"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.16"
nalgebra = { version = "0.31.0", features = ["serde-serialize"] }
anyhow = "1.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = { version="1.0" }
flate2 = "1.0"
roxmltree = "0.14.1"
xmlwriter = "0.1.0"
semver = { version = "1.0", features = ["serde"]}

[dev-dependencies]
pretty_env_logger = "0.4.0"