[package]
name = "rnote"
version = "0.5.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rnote-compose = {path = "../rnote-compose", version="0.1"}
rnote-engine = {path = "../rnote-engine", version="0.1"}
rnote-fileformats = {path = "../rnote-fileformats", version="0.1"}

log = "0.4.16"
pretty_env_logger = "0.4.0"
num-derive = "0.3.3"
num-traits = "0.2.14"
once_cell = "1.8"
rand = "0.8.5"
rand_pcg = "0.3.1"
rand_distr = "0.4.3"
anyhow = "1.0"
serde = {version = "1.0", features = ["derive", "rc"]}
serde_json = { version="1.0" }
futures = "0.3.21"
rayon = "1.5"
nalgebra = { version = "0.31.0", features = ["serde-serialize"] }
parry2d-f64 = { version = "0.9.0", features = ["serde-serialize"] }
gtk4 = {version = "0.4.8", features = ["v4_8"]}
adw = {version = "0.2.0-alpha.2", package="libadwaita", features = ["v1_2"]}
cairo-rs = {version = "0.15.12", features = ["png", "svg", "pdf"]}
poppler-rs = {version = "0.19.0", features = ["v21_12"] }
svg = "0.10.0"
image = "0.23.14"
gettext-rs = { version = "0.7.0", features = ["gettext-system"] }
kurbo = {version = "0.8.3" }
piet = { path = "../piet/piet" }
piet-svg = { path = "../piet/piet-svg"}
piet-cairo = { path = "../piet/piet-cairo"}
url = "2.2.2"
unicode-segmentation = "1.9.0"
