[package]
name = "rnote"
version = "0.5.9"
edition = "2021"
rust-version = "1.65"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
anyhow = "1.0"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[dependencies]
rnote-compose = {path = "../rnote-compose", version="0.1"}
rnote-engine = {path = "../rnote-engine", version="0.1"}
rnote-fileformats = {path = "../rnote-fileformats", version="0.1"}

log = "0.4.16"
pretty_env_logger = "0.4.0"
num-derive = "0.3.3"
num-traits = "0.2.14"
once_cell = "1.8"
rand = "0.8.5"
rand_pcg = "0.3.1"
rand_distr = "0.4.3"
anyhow = "1.0"
serde = {version = "1.0", features = ["derive", "rc"]}
serde_json = { version="1.0" }
futures = "0.3.21"
rayon = "1.5"
nalgebra = { version = "0.31.0", features = ["serde-serialize"] }
parry2d-f64 = { version = "0.9.0", features = ["serde-serialize"] }
gtk4 = {version = "0.5.3", features = ["xml_validation", "v4_8"]}
adw = {version = "0.2.1", package="libadwaita", features = ["v1_2"]}
cairo-rs = {version = "0.16.3", features = ["png", "svg", "pdf"]}
# newest poppler feature ("v21_12") is causing linking errors with mingw for some reason
poppler-rs = {version = "0.20.0", features = ["v20_9"] }
svg = "0.10.0"
image = "0.23.14"
piet = "0.6"
piet-cairo = "0.6"
kurbo = "0.9.0"
url = "2.2.2"
unicode-segmentation = "1.9.0"
gettext-rs = { version = "0.7.0", features = ["gettext-system"] }
fs_extra = "1.2.0"
regex = "1.6.0"
