[package]
name = "rough-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
svg = "0.10"
anyhow = "1.0"
serde = {version = "1.0", features = ["derive"]}
nalgebra = { version = "0.29", features = ["serde-serialize"] }