[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "rnote-cli"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
rnote-compose = { workspace = true, features = ["clap-derive"] }
rnote-engine = { workspace = true, features = ["cli"] }

anyhow = { workspace = true }
clap = { workspace = true }
dialoguer = { workspace = true }
image = { workspace = true }
indicatif = { workspace = true }
nalgebra = { workspace = true }
open = { workspace = true }
parry2d-f64 = { workspace = true }
smol = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# temporary
itertools = { workspace = true }
ijson = { workspace = true }
flate2 = { workspace = true }
serde_json = {workspace = true }
