[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "rnote-compose"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
approx = { workspace = true }
base64 = { workspace = true }
clap = { workspace = true, optional = true }
ink-stroke-modeler-rs = { workspace = true }
kurbo = { workspace = true }
nalgebra = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
once_cell = { workspace = true }
palette = { workspace = true }
parry2d-f64 = { workspace = true }
piet = { workspace = true }
piet-cairo = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
rand_pcg = { workspace = true }
regex = { workspace = true }
rough_piet = { workspace = true }
roughr = { workspace = true }
serde = { workspace = true }
svg = { workspace = true }
tracing = { workspace = true }

[features]
clap-derive = ["dep:clap"]
