[package]
name = "rnote-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
rnote-compose = { workspace = true }

tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
itertools = { workspace = true }
once_cell = { workspace = true }
futures = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ijson = { workspace = true }
nalgebra = { workspace = true }
parry2d-f64 = { workspace = true }
chrono = { workspace = true }
semver = { workspace = true }
rand = { workspace = true }
rand_pcg = { workspace = true }
rand_distr = { workspace = true }
slotmap = { workspace = true }
rstar = { workspace = true }
geo = { workspace = true }
flate2 = { workspace = true }
base64 = { workspace = true }
regex = { workspace = true }
unicode-segmentation = { workspace = true }
roxmltree = { workspace = true }
xmlwriter = { workspace = true }
usvg = { workspace = true }
svg = { workspace = true }
image = { workspace = true }
kurbo = { workspace = true }
piet = { workspace = true }
piet-cairo = { workspace = true }
roughr = { workspace = true }
rough_piet = { workspace = true }
rodio = { workspace = true }
glib = { workspace = true }
gio = { workspace = true }
cairo-rs = { workspace = true }
librsvg = { workspace = true }
poppler-rs = { workspace = true }
# the long-term plan is to remove the gtk4 dependency entirely after switching to another renderer.
gtk4 = { workspace = true, optional = true }
clap = { workspace = true, optional = true }

[dev-dependencies]
approx = { workspace = true }

[features]
default = []
cli = ["dep:clap"]
ui = ["dep:gtk4"]
