[package]
authors.workspace = true
build = "build.rs"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "rnote"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
rnote-compose = { workspace = true }
rnote-engine = { workspace = true, features = ["ui"] }

adw = { workspace = true }
anyhow = { workspace = true }
approx = { workspace = true }
async-fs = { workspace = true }
base64 = { workspace = true }
cairo-rs = { workspace = true }
fs_extra = { workspace = true }
futures = { workspace = true }
gettext-rs = { workspace = true }
gtk4 = { workspace = true }
ijson = { workspace = true }
image = { workspace = true }
itertools = { workspace = true }
kurbo = { workspace = true }
nalgebra = { workspace = true }
notify-debouncer-full = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
numeric-sort = { workspace = true }
once_cell = { workspace = true }
open = { workspace = true }
palette = { workspace = true }
parry2d-f64 = { workspace = true }
path-absolutize = { workspace = true }
piet = { workspace = true }
piet-cairo = { workspace = true }
poppler-rs = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
rand_pcg = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
rough_piet = { workspace = true }
roughr = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
svg = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
unicode-segmentation = { workspace = true }
url = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
glib-build-tools = { workspace = true }

[target.'cfg(windows)'.build-dependencies]
winresource = { workspace = true }
