# Specify sources
rnote_compose_sources = files(
    'lib.rs',
    'utils.rs',
    'helpers.rs',
    'color.rs',
    'penevent.rs',
    'transform/mod.rs',
    'transform/transformbehaviour.rs',
    'builders/mod.rs',
    'builders/shapebuilderbehaviour.rs',
    'builders/linebuilder.rs',
    'builders/rectanglebuilder.rs',
    'builders/fociellipsebuilder.rs',
    'builders/penpathbuilder.rs',
    'penpath/mod.rs',
    'penpath/element.rs',
    'penpath/segment.rs',
    'shapes/mod.rs',
    'shapes/shapebehaviour.rs',
    'shapes/line.rs',
    'shapes/rectangle.rs',
    'shapes/ellipse.rs',
    'shapes/quadbez.rs',
    'shapes/cubbez.rs',
    'style/mod.rs',
    'style/composer.rs',
    'style/smooth/mod.rs',
    'style/smooth/smoothoptions.rs',
    'style/rough/mod.rs',
    'style/rough/roughoptions.rs',
    'style/rough/roughgenerator.rs',
    'style/textured/mod.rs',
    'style/textured/texturedoptions.rs',
    'style/textured/textureddotsdistribution.rs',
    'style/drawhelpers.rs',
)