# Specify sources
rnote_compose_sources = files(
    'builders/cubbezbuilder.rs',
    'builders/fociellipsebuilder.rs',
    'builders/linebuilder.rs',
    'builders/mod.rs',
    'builders/penpathcurvedbuilder.rs',
    'builders/penpathmodeledbuilder.rs',
    'builders/penpathsimplebuilder.rs',
    'builders/quadbezbuilder.rs',
    'builders/rectanglebuilder.rs',
    'builders/coordinatesystem2dbuilder.rs',
    'builders/coordinatesystem3dbuilder.rs',
    'builders/quadrantcoordinatesystem2dbuilder.rs',
    'builders/shapebuilderbehaviour.rs',
    'penpath/element.rs',
    'penpath/mod.rs',
    'penpath/segment.rs',
    'shapes/cubbez.rs',
    'shapes/ellipse.rs',
    'shapes/line.rs',
    'shapes/mod.rs',
    'shapes/quadbez.rs',
    'shapes/rectangle.rs',
    'shapes/shapebehaviour.rs',
    'style/composer.rs',
    'style/drawhelpers.rs',
    'style/mod.rs',
    'style/rough/mod.rs',
    'style/rough/roughgenerator.rs',
    'style/rough/roughoptions.rs',
    'style/smooth/mod.rs',
    'style/smooth/smoothoptions.rs',
    'style/textured/mod.rs',
    'style/textured/textureddotsdistribution.rs',
    'style/textured/texturedoptions.rs',
    'transform/mod.rs',
    'transform/transformbehaviour.rs',
    'color.rs',
    'helpers.rs',
    'lib.rs',
    'penhelpers.rs',
    'utils.rs',
)
