# sounds
sounds_files = files(
  'sounds/marker_00.wav',
  'sounds/marker_01.wav',
  'sounds/marker_02.wav',
  'sounds/marker_03.wav',
  'sounds/marker_04.wav',
  'sounds/marker_05.wav',
  'sounds/marker_06.wav',
  'sounds/marker_07.wav',
  'sounds/marker_08.wav',
  'sounds/marker_09.wav',
  'sounds/marker_10.wav',
  'sounds/marker_11.wav',
  'sounds/marker_12.wav',
  'sounds/marker_13.wav',
  'sounds/marker_14.wav',
  'sounds/brush.wav',
)

install_data(
  sounds_files,
  install_dir: pkgdatadir / 'sounds'
)
